webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  ingressClassName: nginx
  rules:
# host 是 live.webook.com 的时候 命中我这一条
    - host: live.webook.com
      http:
        paths:
          - backend:
              service:
                name: webook
                port:
                  number: 80
# 请求路径前缀是 /  的时候
# 将流量转发到后面的 webook 服务上 端口是80
            pathType: Prefix
            path: /
